Fix visibility of unwanted element

--- a/Fuyo.css
+++ b/Fuyo.css
@@ -67,6 +67,7 @@ yt-live-chat-banner-manager,
 yt-live-chat-banner-renderer,
 #separator,
 #fab-container,
+#panel-pages,
 .yt-reaction-control-panel-button-view-model,
 #toast-container,
 #ticker {
